--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <canvas id="matrix"></canvas>
   <header>
     <h4>Frontend | JavaScript | React | DevSecOps</h4>
-    <h1>&#x1F4BB; CyberDev - Webentwickler</h1>
+    <h1>&#x1F4BB; CyberDev - IT Security</h1>
     <nav aria-label="Hauptnavigation">
       <a href="#about">Über mich</a>
       <a href="#projects">Projekte</a>
